src/objects/FS_TemporaryProductDiscount__c.object
<CustomObject>
    <description>This object describes the relationship between Distributor Type and Temporary Product Discount with regards to the Product</description>
    <fields>
        <fullName>FS_C_C__c</fullName>
        <defaultValue>0</defaultValue>
        <description>TPR percentage for Distributor Type: C&amp;C</description>
        <label>C&amp;C</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FS_Direct__c</fullName>
        <defaultValue>0</defaultValue>
        <description>TPR percentage for Distributor Type: Direct</description>
        <label>Direct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FS_Logist__c</fullName>
        <defaultValue>0</defaultValue>
        <description>TPR percentage for Distributor Type: Logist</description>
        <label>Logist</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FS_Partner__c</fullName>
        <defaultValue>0</defaultValue>
        <description>TPR percentage for Distributor Type: Partner</description>
        <label>Partner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FS_Slabco__c</fullName>
        <defaultValue>0</defaultValue>
        <description>TPR percentage for Distributor Type: FS_Slabco</description>
        <label>Slabco</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FS_Strategic__c</fullName>
        <defaultValue>0</defaultValue>
        <description>TPR percentage for Distributor Type: Strategic</description>
        <label>Strategic</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Temporary Product Discount</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Temporary Product Discount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temporary Product Discounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>